# auto-tools

./: Leetcode.java  best_function.py  date_price.csv  get_price_message.py  leetcode.py  main .py  pyproject.toml  temp.csv
.github/workflows/: test.yml
autotools/core/: get_message.py
autotools/resources/: message.txt  target_csv.csv
check_stone_price/: get_message.py  target_csv.csv
scripts/: run_check_price.py
tests/: test_checkprice.py
