[project]
name = "auto-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "wu",email = "wu@qq.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0"
requests = "^2.31"

[tool.poetry.dev-dependencies]
pytest = "^9.0"


[[tool.poetry.packages]]
include = "autotools"